Fourth video + social share

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <meta property="og:title" content="Trackyo">
     <meta property="og:description" content="Trackyo employs connected vehicle technology for smart traffic/ asset management at geo-fenced regions.">
-    <meta property="og:image" content="media/Trackyo-og.png">
+    <meta property="og:image" content="http://trackyotech.com/media/Trackyo-og.png">
     <meta property="og:url" content="https://www.trackyotech.com/">
 
     <meta name="twitter:title" content="Plinth'17">
@@ -421,18 +421,22 @@
           </div>
         </div>
         <div class="row justify-content-center">
-          <div class="col-sm-12 col-md-4">
-            <div class="videosElement">              
-              <img src="media/videos/p1b.png" class="pop" data-type="youtube" data-id="qT-Gfpms9zs" data-autoplay='true'>
+          <div class="col-sm-12 col-md-3">
+            <div class="videosElement">
+              <img src="media/videos/p1b.png" class="pop" data-type="youtube" data-id="MIZeoa-zIaU" data-autoplay='true'>
             </div>
           </div>
-          <div class="col-sm-12 col-md-4">
+          <div class="col-sm-12 col-md-3">
             <div class="videosElement">              
               <img src="media/videos/p2b.png" class="pop" data-type="youtube" data-id="hah1ET9hQoE" data-autoplay='true'>
             </div>
           </div>
-          
-          <div class="col-sm-12 col-md-4">
+          <div class="col-sm-12 col-md-3">
+            <div class="videosElement">              
+              <img src="media/videos/p3D.png" class="pop" data-type="youtube" data-id="qT-Gfpms9zs" data-autoplay='true'>
+            </div>
+          </div>
+          <div class="col-sm-12 col-md-3">
             <div class="videosElement">
               <img src="media/videos/p4.png" class="pop" data-type="youtube" data-id="-LYiv6nKs7A" data-autoplay='true'>
             </div>
