Added survey images

--- a/index.html
+++ b/index.html
@@ -450,31 +450,31 @@
           <div class="col-sm-auto">
             <div class="aa">
               What people feel about Trackyo<br>
-               compared to the currently available alternative solutions
+              compared to the currently available alternative solutions
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-lg-4 center">
-            <div class="iprogress-bar" data-percent="8" data-duration="500"></div>
+            <div class="iprogress-bar" data-percent="8" data-duration="497" data-abc="Road Safety Mirror.jpg"></div>
             <div class="alternatives">Road Safety Mirrors</div>
           </div>
           <div class="col-sm-12 col-lg-4">
-            <div class="iprogress-bar" data-percent="8" data-duration="500"></div>
+            <div class="iprogress-bar" data-percent="8" data-duration="498" data-abc="cctv2.jpg"></div>
             <div class="alternatives">CCTV Surveillance</div>
           </div>
           <div class="col-sm-12 col-lg-4">
-            <div class="iprogress-bar" data-percent="12" data-duration="500"></div>
+            <div class="iprogress-bar" data-percent="12" data-duration="499" data-abc="Manual Monitoring.jpg"></div>
             <div class="alternatives">Manual Monitoring</div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-4 ml-md-auto">
-            <div class="iprogress-bar1" data-percent="20" data-duration="500"></div>
+            <div class="iprogress-bar1" data-percent="20" data-duration="500" data-abc="Speed Breakers.png"></div>
             <div class="alternatives">Speed Breakers</div>
           </div>
           <div class="col-sm-12 col-md-4 mr-md-auto">
-            <div class="iprogress-bar1" data-percent="65" data-duration="500"></div>
+            <div class="iprogress-bar1" data-percent="65" data-duration="501" data-abc="Trackyo.jpg"></div>
             <div class="alternatives">Trackyo</div>
           </div>
         </div>
@@ -1158,7 +1158,7 @@
       function fixNav() {
         if(window.scrollY >= 10) {
           document.body.classList.add('fixed-nav');
-          console.log(heading.offsetHeight);
+          //console.log(heading.offsetHeight);
           
           //document.getElementsByClassName('logo').src='media/logo.png';
           heading.style.paddingTop = topOfNav + 'px';  
