mobile responsiveness, survey data

--- a/index.html
+++ b/index.html
@@ -451,33 +451,44 @@ gtag('config', 'UA-56286897-6');
         <div class="row justify-content-center">
           <div class="col-sm-auto">
             <div class="aa">
-              What people feel about Trackyo<br>
-              compared to the currently available alternative solutions
+              Why choose Trackyo?<br>
+              <span class="smaller">Our connected vehicle technology platform has proven to be
+              <p>much more effective than the currently used alternative solutions</span>
             </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-lg-4 center">
             <div class="iprogress-bar" data-percent="8" data-duration="497" data-abc="Road Safety Mirror.jpg"></div>
-            <div class="alternatives">Road Safety Mirrors</div>
+            <div class="alternatives">
+              <span class="percentage">8% </span><br>Road Safety Mirrors
+            </div>
           </div>
           <div class="col-sm-12 col-lg-4">
             <div class="iprogress-bar" data-percent="8" data-duration="498" data-abc="cctv2.jpg"></div>
-            <div class="alternatives">CCTV Surveillance</div>
+            <div class="alternatives">
+              <span class="percentage">8% </span><br>CCTV Surveillance
+            </div>
           </div>
           <div class="col-sm-12 col-lg-4">
             <div class="iprogress-bar" data-percent="12" data-duration="499" data-abc="Manual Monitoring.jpg"></div>
-            <div class="alternatives">Manual Monitoring</div>
+            <div class="alternatives">
+              <span class="percentage">12% </span><br>Manual Monitoring
+            </div>
           </div>
         </div>
         <div class="row">
           <div class="col-sm-12 col-md-4 ml-md-auto">
             <div class="iprogress-bar1" data-percent="20" data-duration="500" data-abc="Speed Breakers.png"></div>
-            <div class="alternatives">Speed Breakers</div>
+            <div class="alternatives">
+              <span class="percentage">20% </span><br>Speed Breakers
+            </div>
           </div>
           <div class="col-sm-12 col-md-4 mr-md-auto">
             <div class="iprogress-bar1" data-percent="65" data-duration="501" data-abc="Trackyo.jpg"></div>
-            <div class="alternatives">Trackyo</div>
+            <div class="alternatives">
+              <span class="percentage">65% </span><br>Trackyo
+            </div>
           </div>
         </div>
         <!--<div class="row">
