Video image change

--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ gtag('config', 'UA-56286897-6');
         <div class="row justify-content-center">
           <div class="col-sm-12 col-md-3">
             <div class="videosElement">
-              <img src="media/videos/p1b.png" class="pop" data-type="youtube" data-id="MIZeoa-zIaU" data-autoplay='true'>
+              <img src="media/videos/p6.png" class="pop" data-type="youtube" data-id="MIZeoa-zIaU" data-autoplay='true'>
             </div>
           </div>
           <div class="col-sm-12 col-md-3">
