--- a/index.html
+++ b/index.html
@@ -54,6 +54,16 @@ gtag('config', 'UA-56286897-6');
       <div class="logoLoader">
         trac<span class="logoLarge">kyo</span><span class="TM">&trade;</span>
       </div>
+      <div class="cs-loader">
+      <div class="cs-loader-inner">
+        <label> ●</label>
+        <label> ●</label>
+        <label> ●</label>
+        <label> ●</label>
+        <label> ●</label>
+        <label> ●</label>
+      </div>
+    </div>
     </div>
     <section id="intro">
       <video class="homeVideo" id="bgvid" playsinline autoplay muted loop style="position:absolute;">
