css order optimized

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
     <meta name="twitter:card" content="summary_large_image">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link rel="stylesheet" href="css/index.css">
+    <link href="css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="css/video.css">
-    <link rel="stylesheet" href="css/circle.css">
+    <!--<link rel="stylesheet" href="css/circle.css">-->
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/progressbar.css">
 
@@ -31,7 +31,7 @@
 
     <link rel="icon" href="media/trackyoLogoTransparent.png" type="image/gif" sizes="16x16">
 
-    <link href="https://fonts.googleapis.com/css?family=Muli|Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway:300,500,700" rel="stylesheet">
 
     <script src="https://use.fontawesome.com/e9de4e82e4.js"></script>
