Loader logo fix

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ gtag('config', 'UA-56286897-6');
   <body>
     <div class="hameid-loader-overlay" style="display: flex; justify-content: center; align-items: center;">
       <div class="logoLoader">
-        trac<span class="logoLarge">kyo</span><span class="TM">&trade;</span>
+        trac<span class="logoLargeLoader">kyo</span><span class="TM">&trade;</span>
       </div>
       <div class="cs-loader">
       <div class="cs-loader-inner">
