Added VP8 encoded videos for backup against h264 videos

--- a/index.html
+++ b/index.html
@@ -208,6 +208,7 @@ gtag('config', 'UA-56286897-6');
                 <!--<img id="featuresImage" src="media/iPad2.png" >-->
                 <video class="video" poster="" preload="auto" autoplay>
                   <source src="media/product1.webm" type="video/webm">
+                  <source src="media/features/product1.webm" type="video/webm">
                   <source src="media/product1.m4v" type="video/m4v">
                   <source src="media/product1.mkv" type="video/mkv">
                   <source src="media/product1.mp4" type="video/mp4">
@@ -231,6 +232,7 @@ gtag('config', 'UA-56286897-6');
               <div class="graphics">
                 <video class="video" poster="" preload="auto" autoplay>
                   <source src="media/product2.webm" type="video/webm">
+                  <source src="media/features/product2.webm" type="video/webm">
                   <source src="media/product2.m4v" type="video/m4v">
                   <source src="media/product2.mp4" type="video/mp4">
                   Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="media/product2.webm">download it</a> and watch it with your favorite video player!
@@ -254,6 +256,7 @@ gtag('config', 'UA-56286897-6');
               <div class="graphics">
                 <video class="video" poster="" preload="auto">
                   <source src="media/product3.webm" type="video/webm">
+                  <source src="media/features/product3.webm" type="video/webm">
                   <source src="media/product3.m4v" type="video/m4v">
                   <source src="media/product3.mp4" type="video/mp4">
                   Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="media/product3.webm">download it</a> and watch it with your favorite video player!
@@ -276,6 +279,7 @@ gtag('config', 'UA-56286897-6');
               <div class="graphics">
                 <video class="video" poster="" preload="auto">
                   <source src="media/product4.webm" type="video/webm">
+                  <source src="media/features/product4.webm" type="video/webm">
                   <source src="media/product4.m4v" type="video/m4v">
                   <source src="media/product4.mp4" type="video/mp4">
                   Sorry, your browser doesn't support embedded videos, but don't worry, you can <a href="media/product4.webm">download it</a> and watch it with your favorite video player!
