--- a/index.html
+++ b/index.html
@@ -15,13 +15,9 @@
     <meta property="og:image" content="http://trackyotech.com/media/Trackyo-og.png">
     <meta property="og:url" content="https://www.trackyotech.com/">
 
-    <meta name="twitter:title" content="Plinth'17">
-    <meta name="twitter:description" content="Plinth is the Annual Techno-Management Literary Fest of LNMIIT Jaipur.">
-    <meta name="twitter:image" content="https://plinth.in/media/plinth-preview.jpg">
-    <meta name="twitter:card" content="summary_large_image">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
-    <link href="css/fonts.css" rel="stylesheet" type="text/css" media="none" onload="this.media='all';">
+    <link href="css/fonts.css" rel="stylesheet">
     <link href="css/index.css" rel="stylesheet">
     <link rel="stylesheet" href="css/video.css">
     <!--<link rel="stylesheet" href="css/circle.css">-->
@@ -55,7 +51,7 @@ gtag('config', 'UA-56286897-6');
   </head>
   <body>
     <div class="hameid-loader-overlay" style="display: flex; justify-content: center; align-items: center;">
-      <div class="logoLoader" style="display: none;">
+      <div class="logoLoader">
         trac<span class="logoLargeLoader">kyo</span><span class="TM">&trade;</span>
       </div>
       <div class="cs-loader">
