Added backup images as poster in video for mobile devices

--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@ gtag('config', 'UA-56286897-6');
             <div class="col-md-6 col-sm-12 order-md-1 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
                 <!--<img id="featuresImage" src="media/iPad2.png" >-->
-                <video class="video" poster="" preload="auto" autoplay>
+                <video class="video" poster="media/features/G1.jpg" preload="auto" autoplay>
                   <source src="media/product1.webm" type="video/webm">
                   <source src="media/features/product1.webm" type="video/webm">
                   <source src="media/product1.m4v" type="video/m4v">
@@ -226,7 +226,7 @@ gtag('config', 'UA-56286897-6');
           <div class="row">
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <video class="video" poster="" preload="auto" autoplay>
+                <video class="video" poster="media/features/G2a.jpg" preload="auto" autoplay>
                   <source src="media/product2.webm" type="video/webm">
                   <source src="media/features/product2.webm" type="video/webm">
                   <source src="media/product2.m4v" type="video/m4v">
@@ -250,7 +250,7 @@ gtag('config', 'UA-56286897-6');
           <div class="row">
             <div class="col-md-6 col-sm-12 order-md-1 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <video class="video" poster="" preload="auto">
+                <video class="video" poster="media/features/G3.jpg" preload="auto">
                   <source src="media/product3.webm" type="video/webm">
                   <source src="media/features/product3.webm" type="video/webm">
                   <source src="media/product3.m4v" type="video/m4v">
@@ -273,7 +273,7 @@ gtag('config', 'UA-56286897-6');
           <div class="row">
             <div class="col-md-6 col-sm-12 order-md-2 order-sm-1" style="padding-left: 0px; padding-right: 0px;" >
               <div class="graphics">
-                <video class="video" poster="" preload="auto">
+                <video class="video" poster="media/features/G4.jpg" preload="auto">
                   <source src="media/product4.webm" type="video/webm">
                   <source src="media/features/product4.webm" type="video/webm">
                   <source src="media/product4.m4v" type="video/m4v">
