Added contact us in same page itself

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ gtag('config', 'UA-56286897-6');
               <a class="nav-link" href="#blog">Blog</a>
             </li>
             <li class="nav-item menuItem">
-              <a class="nav-link" href="https://trackyo.typeform.com/to/xW0IrH" target="_blank">Contact Us</a>
+              <a class="nav-link typeform-share link" href="https://trackyo.typeform.com/to/xW0IrH" data-mode="popup" target="_blank">Contact Us </a> 
+            <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm_share", b="https://embed.typeform.com/"; if(!gi.call(d,id)){ js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() 
+            </script>
             </li>
           </ul>
           <div class="col-sm-auto social">
@@ -112,6 +114,7 @@ gtag('config', 'UA-56286897-6');
           </div>
         </div>
       </nav>
+
       <!--<nav id="header">
         <div class="container-fluid">
           <div class="row">
@@ -1091,7 +1094,7 @@ gtag('config', 'UA-56286897-6');
               2F, 21-7-221, Charkaman,<br>
               Hyderabad, Telangana.<br>
               Pin-500002, India.
-            </div>
+            </div>            
           </div>
           <div class="col-sm-12 col-md-6 col-lg-4 ml-md-auto">
             <div class="footerSection">
